Z-Index Fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body, input, label, button{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 99;
 }
 
 .nav__figure{
